# watering_controller

./: CMakeLists.txt  README.md  example_test.py  partitions.csv  sdkconfig
main/: ACS71020_eeprom.h  ACS71020_volatile.h  CMakeLists.txt  topics.txt  u8g2_esp32_hal.c  u8g2_esp32_hal.h  watering_controller.c
